--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,4 +40,4 @@ jobs:
 
       - name: 🔹 Vérifier la configuration Docker Compose
         run: |
-          docker compose -f airflow-docker/docker-compose.yml config
+          docker compose -f airflow-docker/docker-compose.yaml config
